implement Login API

--- a/compose.yaml
+++ b/compose.yaml
@@ -23,6 +23,7 @@ services:
     restart: always
     environment:
       - DB_HOST=mysql
+      - ENV=prod
     ports:
       - 3000:3000
     networks:
