--- a/compose.yaml
+++ b/compose.yaml
@@ -24,6 +24,7 @@ services:
     environment:
       - DB_HOST=mysql
       - ENV=prod
+      - SALT_ROUNDS=10
     ports:
       - 3000:3000
     networks:
