--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ services:
     image: viact-backend
     build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     container_name: backend
     restart: always
     environment:
